# LuisaShaderToy

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: CMakeLists.txt
src/apps/: CMakeLists.txt  energy_plant.cpp  flame.cpp  fractal_pyramid.cpp  heartwing_angel.cpp  protean_clouds.cpp  rainbow_spaghetti.cpp  sdf_renderer.cpp  seascape.cpp  sphere_in_cable.cpp  star_nest.cpp
src/ext/: CMakeLists.txt
src/ext/glad/: CMakeLists.txt
src/ext/glad/glad/: glad.c  glad.h
src/ext/imgui/: CMakeLists.txt
src/ext/stb/: CMakeLists.txt  stb.cpp
src/gui/: CMakeLists.txt  framerate.cpp  framerate.h  gl_texture.cpp  gl_texture.h  hid.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h  shader_toy.cpp  shader_toy.h  window.cpp  window.h
tools/: record.py
